--- a/global_config.json
+++ b/global_config.json
@@ -1,9 +1,9 @@
 {
   "db": {
-    "host": "dg.linghouyun.com",
-    "port": 18836,
-    "user": "quantra",
-    "pass": "Quantra_Mysql",
-    "db": "quantra"
+    "host": "localhost",
+    "port": 3306,
+    "user": "root",
+    "pass": "luobin2128",
+    "db": "quantra_test"
   }
 }
